# home-assistant-matter-hub

./: .env.sample  .gitignore  AGENTS.md  Cargo.toml  README.md  package.json
.github/actions/docker/: action.yml
.github/workflows/: publish-addon-main.yml  publish-addon-rework.yml  release.yml
crates/hamh-api/: Cargo.toml
crates/hamh-api/src/: lib.rs
crates/hamh-api/tests/: api_smoke.rs
crates/hamh-app/: Cargo.toml
crates/hamh-app/assets/: app.js  index.html  styles.css
crates/hamh-app/src/: main.rs
crates/hamh-core/: Cargo.toml
crates/hamh-core/src/: device_map.rs  filter.rs  lib.rs  models.rs
crates/hamh-ha/: Cargo.toml
crates/hamh-ha/src/: lib.rs
crates/hamh-matter/: Cargo.toml
crates/hamh-matter/src/: adapter.rs  lib.rs
crates/hamh-ops/: Cargo.toml
crates/hamh-ops/src/: lib.rs
crates/hamh-storage/: Cargo.toml
crates/hamh-storage/src/: file_storage.rs  lib.rs
docker/: rework-addon-entrypoint.sh  rework-addon.Dockerfile
docs/: Design-Spec-vNext.md  myst.yml
docs/Developer Documentation/: README.md  local-dev.md
