[workspace]
members = [
  "crates/hamh-app",
  "crates/hamh-api",
  "crates/hamh-core",
  "crates/hamh-ha",
  "crates/hamh-matter",
  "crates/hamh-storage",
  "crates/hamh-ops",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "macros"] }
async-trait = "0.1"
