[package]
name = "hamh-api"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

hamh-core = { path = "../hamh-core" }
hamh-storage = { path = "../hamh-storage" }
hamh-ops = { path = "../hamh-ops" }
