[package]
name = "hamh-app"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

hamh-api = { path = "../hamh-api" }
hamh-storage = { path = "../hamh-storage" }
