[package]
name = "hamh-ha"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Planned: hass-rs for Home Assistant websocket integration.
