[package]
name = "hamh-storage"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

hamh-core = { path = "../hamh-core" }
